--- a/portal/templates/access.html
+++ b/portal/templates/access.html
@@ -23,15 +23,15 @@
                 <div id="wellContent">
 
                     <div class="headline">
-                        <div style="margin-bottom: 1em">Welcome to TrueNTH</div>
-                        Tools for navigating the prostate cancer journey
+                        <div style="margin-bottom: 1em">{{ _("Welcome to TrueNTH") }}</div>
+                        {{ _("Tools for navigating the prostate cancer journey") }}
                     </div>
-                     <a href="/home" class="btn feature-btn feature-btn-primary">Report Symptoms</a> &nbsp; &nbsp;
-                     <a href="/initial-queries" class="btn feature-btn feature-btn-primary">Complete Register</a>
+                     <a href="/home" class="btn feature-btn feature-btn-primary">{{ _("Report Symptoms") }}</a> &nbsp; &nbsp;
+                     <a href="/initial-queries" class="btn feature-btn feature-btn-primary">{{ _("Complete Register") }}</a>
 
                 </div>
                 <div class="tnth-splash-bottom">
-                    <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">Explore How This Works</span><span class="hidden-sm hidden-md hidden-lg">Explore</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">Learn About TrueNTH</span><span class="hidden-sm hidden-md hidden-lg">Learn</span></a>
+                    <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">{{ _("Explore How This Works") }}</span><span class="hidden-sm hidden-md hidden-lg">{{ _("Explore") }}</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">{{ _("Learn About TrueNTH") }}</span><span class="hidden-sm hidden-md hidden-lg">{{ _("Learn") }}</span></a>
                 </div>
 
             </div>
