--- a/portal/templates/error.html
+++ b/portal/templates/error.html
@@ -22,9 +22,9 @@
 
                 <div id="wellContent">
 
-                    <div class="headline">Sorry, this webpage may have moved.</div>
-                    <a href="/" class="btn feature-btn feature-btn-primary">Go to TrueNTH Home</a>
-                    <p>If you continue to have problems, use the contact link below.</p>
+                    <div class="headline">{{ _("Sorry, this webpage may have moved.") }}</div>
+                    <a href="/" class="btn feature-btn feature-btn-primary">{{ _("Go to TrueNTH Home") }}</a>
+                    <p>{{ _("If you continue to have problems, use the contact link below.") }}</p>
 
                 </div>
 
