--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -21,11 +21,11 @@
                         <div style="margin-bottom: 1em">{{ app_text('landing title') }}</div>
                         {{ app_text('landing sub-title') }}
                     </div>
-                    <a href="/go" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
+                    <a href="/go" class="btn feature-btn feature-btn-primary">{{ _("Register") }}</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">{{ _("Login") }}</a>
 
                 </div>
                 <div class="tnth-splash-bottom">
-                    <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">Explore How This Works</span><span class="hidden-sm hidden-md hidden-lg">Explore</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">Learn About TrueNTH</span><span class="hidden-sm hidden-md hidden-lg">Learn</span></a>
+                    <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">{{ _("Explore How This Works") }}</span><span class="hidden-sm hidden-md hidden-lg">{{ _("Explore") }}</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">{{ _("Learn About TrueNTH") }}</span><span class="hidden-sm hidden-md hidden-lg">{{ _("Learn") }}</span></a>
                 </div>
             </div>
         </div>
