--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -85,8 +85,8 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h2 class="modal-title">TrueNTH</h2>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="{{ _('Close') }}"><span aria-hidden="true">&times;</span></button>
+                            <h2 class="modal-title">{{ _("TrueNTH") }}</h2>
                           </div>
                           <div class="modal-body">
 
@@ -99,7 +99,7 @@
 
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn btn-default btn-tnth-primary btn-lg" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default btn-tnth-primary btn-lg" data-dismiss="modal">{{ _("Close") }}</button>
                           </div>
                         </div>
                       </div>
