--- a/portal/templates/patient_profile.html
+++ b/portal/templates/patient_profile.html
@@ -3,7 +3,7 @@
 {% from "flask_user/_macros.html" import back_btn %}
 {% from "profile_macros.html" import profile, profileSaveBtn %}
 
-{{ back_btn('patients','Patients List') }}
+{{ back_btn('patients', _('Patients List')) }}
 
 <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
