--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -7,15 +7,15 @@
 
 <div  id="userSessionReportDetailHeader" class="tnth-headline report-custom-header gradient">
 	<span class="left">
-	<h4>Assessment Report Detail</h4>
-	<h4 class="text-muted">Patient #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
+	<h4>{{ _("Assessment Report Detail") }}</h4>
+	<h4 class="text-muted">{{ _("Patient") }} #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
 	</span>
 	<span class="right">
-		<a href="{%if current_user.has_role('provider')%}{{url_for('patients.patient_profile', patient_id=user.id) }}{%else%}{{url_for('portal.profile', user_id=user.id)}}{%endif%}" class="btn btn-xs btn-tnth-back" data-toggle="tooltip" data-placement="top" title="Back to Patient Profile"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a><a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="Back to Truenth Home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+		<a href="{%if current_user.has_role('provider')%}{{url_for('patients.patient_profile', patient_id=user.id) }}{%else%}{{url_for('portal.profile', user_id=user.id)}}{%endif%}" class="btn btn-xs btn-tnth-back" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Patient Profile') }}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a><a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 	</span>
 	
 </div>
-<div class="report-error-message">Unable to load report</div>
+<div class="report-error-message">{{ _("Unable to load report") }}</div>
 <div class="container">
 	<div class="row" style="position: relative;">
 	    <div class="col-md-12">
