--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -2,40 +2,40 @@
 {% block main %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-{{ back_btn(PORTAL,'Home') }}
+{{ back_btn(PORTAL, _('Home')) }}
 
-<h3 class="tnth-headline">Contact TrueNTH</h3>
-<p>You can use form below or write the TrueNTH team directly at <a href="mailto:us.truenth.org+contact@gmail.com">us.truenth.org+contact@gmail.com</a>.</p>
+<h3 class="tnth-headline">{{ _("Contact TrueNTH") }}</h3>
+<p>{{ _("You can use form below or write the TrueNTH team directly at") }} <a href="mailto:us.truenth.org+contact@gmail.com">us.truenth.org+contact@gmail.com</a>.</p>
 <div class="row">
   <div class="col-md-7">
 
     <form id="profileForm" action="" method="post" class="tnth-form" data-toggle="validator" role="form">
       <div class="form-group">
-        <label for="sendername">Name</label>
+        <label for="sendername">{{ _("Name") }}</label>
         <input type="text" class="form-control" name="sendername"
-          id="sendername" data-error="Please enter your name"
-          placeholder="Your Name" value="{{ sendername }}" required>
+          id="sendername" data-error="{{ _('Please enter your name') }}"
+          placeholder="{{ _('Your Name') }}" value="{{ sendername }}" required>
         <div class="help-block with-errors"></div>
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">{{ _("Email") }}</label>
         <input type="email" class="form-control" name="email"
-          id="email" placeholder="Your Email" value="{{ email }}"
-          data-error="This isn't a valid e-mail address, please double-check."
+          id="email" placeholder="{{ _('Your Email') }}" value="{{ email }}"
+          data-error="{{ _('This is not a valid e-mail address, please double-check.') }}"
           required>
         <div class="help-block with-errors"></div>
       </div>
       <div class="form-group">
-        <label for="subject">Subject</label>
-        <input type="text" class="form-control" name="subject" id="subject" placeholder="What's this about?">
+        <label for="subject">{{ _("Subject") }}</label>
+        <input type="text" class="form-control" name="subject" id="subject" placeholder="{{ _('What is this about?') }}">
       </div>
       <div class="form-group">
-        <label for="body">Text</label>
-        <textarea class="form-control" rows="5" name="body" id="body" data-error="Please add a message for TrueNTH" placeholder="What's on your mind?" required></textarea>
+        <label for="body">{{ _("Text") }}</label>
+        <textarea class="form-control" rows="5" name="body" id="body" data-error="{{ _('Please add a message for TrueNTH') }}" placeholder="{{ _('What is on your mind?') }}" required></textarea>
         <div class="help-block with-errors"></div>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-tnth-primary btn-lg">Send</button>
+        <button type="submit" class="btn btn-tnth-primary btn-lg">{{ _("Send") }}</button>
       </div>
     </form>
 
