--- a/portal/templates/explore.html
+++ b/portal/templates/explore.html
@@ -7,20 +7,20 @@
   {% set loggedIn = true %}
 {% endif %}
 
-  {{ back_btn(PORTAL,'Home') }}
+  {{ back_btn(PORTAL,_('Home')) }}
 
-    <h1 class="tnth-headline">Explore How TrueNTH Works</h1>
+    <h1 class="tnth-headline">{{ _("Explore How TrueNTH Works") }}</h1>
 
     <div class="row">
       <div class="col-xs-12">
 
-        <p>TrueNTH provides custom content and guidance to help you navigate life with prostate cancer.</p>
-        <p>To start, you simply fill out a few standard health forms, either on your own or with your clinician. Then, you'll get  personalized graphs and a library of content tailored to your specific needs.</p>
-        <div class="thumbnail" style="height: 200px">Chart image</div>
-        <p><strong>See your scores in relation to Men Like Me.</strong></p>
-        <p>By comparing your scores to men with similar experiences, treatments, and demographics (like age), you'll have a clearer view of your health</p>
-        <div class="thumbnail" style="height: 200px">Content image</div>
-        <p>Read and print out information on how to take care of your symptoms. You can fill out surveys anytime, to get the most up-to-date information.</p>
+        <p>{{ _("TrueNTH provides custom content and guidance to help you navigate life with prostate cancer.") }}</p>
+        <p>{{ _("To start, you simply fill out a few standard health forms, either on your own or with your clinician. Then, you'll get  personalized graphs and a library of content tailored to your specific needs.") }}</p>
+        <div class="thumbnail" style="height: 200px">{{ _("Chart image") }}</div>
+        <p><strong>{{ _("See your scores in relation to Men Like Me.") }}</strong></p>
+        <p>{{ _("By comparing your scores to men with similar experiences, treatments, and demographics (like age), you'll have a clearer view of your health") }}</p>
+        <div class="thumbnail" style="height: 200px">{{ _("Content image") }}</div>
+        <p>{{ _("Read and print out information on how to take care of your symptoms. You can fill out surveys anytime, to get the most up-to-date information.") }}</p>
         <br />
       </div>
     </div>
@@ -29,9 +29,9 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
         <div class="well well-lg" style="text-align: center">
-          <a class="btn-lg btn-tnth-primary" href="/user/register">Register Now</a>
-          <span style="margin: 0 1em">or</span>
-          <a class="btn-lg btn-tnth-primary" href="/user/sign-in">Log In</a>
+          <a class="btn-lg btn-tnth-primary" href="/user/register">{{ _("Register Now") }}</a>
+          <span style="margin: 0 1em">{{ _("or") }}</span>
+          <a class="btn-lg btn-tnth-primary" href="/user/sign-in">{{ _("Log In") }}</a>
         </div>
       </div>
     </div>
