--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -17,9 +17,9 @@
   <div id="aboutForm" class="tnth-hide">
      <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
         {% if 'name' in still_needed or 'role' in still_needed or 'dob' in still_needed or 'clinical' in still_needed or 'org' in still_needed%}
-          <h3 class="tnth-headline">About You</h3>
+          <h3 class="tnth-headline">{{ _("About You") }}</h3>
 
-          <p class="profile-item-title">Thank You! Now, please finish your registration by telling us about yourself.</p>
+          <p class="profile-item-title">{{ _("Thank You! Now, please finish your registration by telling us about yourself.") }}</p>
 
             <!--<p>First, tell us who you are:</p>-->
             {% if user and user._email %}
@@ -31,7 +31,7 @@
               {{nameGroup()}}
             {% else %}
                 {% if user and user.first_name and user.last_name %}
-                  <p>Your <em>Name</em>: {{user.first_name}} {{user.last_name}}</p>
+                  <p>{{ _("Your") }} <em>{{ _("Name") }}</em>: {{user.first_name}} {{user.last_name}}</p>
                   <br/>
                   <input type="text" name="firstname" id="fistname" value="{{user.first_name}}" style="display:none"/>
                   <input type="text" name="lastname" id="lastname" value="{{user.last_name}}" style="display:none"/>
@@ -54,9 +54,9 @@
               {{clinic(consent_agreements)}}
             {% endif %}
             <br />
-            <p class="tnth-hide" id="continueText">Great! Click continue to start using TrueNTH.</p>
+            <p class="tnth-hide" id="continueText">{{ _("Great! Click continue to start using TrueNTH.") }}</p>
             <br />
-            <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>Continue to TrueNTH</button>
+            <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>{{ _("Continue to TrueNTH") }}</button>
         {% else %}
           <style>
           .reg-complete-container {
@@ -70,9 +70,9 @@
           }
           </style>
            <div class="reg-complete-container">
-              <h4 class="profile-item-title"> Thank you for registering.</h4>
-              <p>Click continue to start using TrueNTH</p>
-              <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>Continue to TrueNTH</button>
+              <h4 class="profile-item-title"> {{ _("Thank you for registering.") }}</h4>
+              <p>{{ _("Click continue to start using TrueNTH") }}</p>
+              <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>{{ _("Continue to TrueNTH") }}</button>
            </div>
         {% endif %}
    
