--- a/portal/templates/invite.html
+++ b/portal/templates/invite.html
@@ -1,22 +1,22 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<h1 class="tnth-headline">Email Invite</h1>
-<p>Send a TrueNTH email invite by filling in the form below.</p>
+<h1 class="tnth-headline">{{ _("Email Invite") }}</h1>
+<p>{{ _("Send a TrueNTH email invite by filling in the form below.") }}</p>
 <form action="/invite" method="post">
     <div class="form-group">
-        <label for="recipients">To (separate multiple addresses with white space)</label>
+        <label for="recipients">{{ _("To (separate multiple addresses with white space)") }}</label>
         <input type="text" class="form-control" name="recipients" id="recipients" size='79' placeholder="user@example.com">
     </div>
     <div class="form-group">
-        <label for="subject">Subject</label>
-        <input type="text" class="form-control" name="subject" id="subject" size='79' value="Invitation to try TrueNTH">
+        <label for="subject">{{ _("Subject") }}</label>
+        <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ _('Invitation to try TrueNTH') }}">
     </div>
     <div class="form-group">
-        <label for="body">Body</label>
-        <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="TrueNTH Invitation">
+        <label for="body">{{ _("Body") }}</label>
+        <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="{{ _('TrueNTH Invitation') }}">
     </div>
-    <button type="submit" class="btn btn-tnth-primary">Send Invite</button>
+    <button type="submit" class="btn btn-tnth-primary">{{ _("Send Invite") }}</button>
 </form>
 
 
