--- a/portal/templates/invite_sent.html
+++ b/portal/templates/invite_sent.html
@@ -3,23 +3,23 @@
 {% from "flask_user/_macros.html" import back_btn %}
 
 
-    {{ back_btn('invite','Email Invite') }}
+    {{ back_btn('invite', _('Email Invite')) }}
 
-    <h1 class="tnth-headline">Email Invite Sent</h1>
+    <h1 class="tnth-headline">{{ _("Email Invite Sent") }}</h1>
     <div class="form-group">
-        <label for="recipients">To</label>
+        <label for="recipients">{{ _("To") }}</label>
         <input type="text" class="form-control" name="recipients" id="recipients" size='79' value="{{ message.recipients }}" readonly>
     </div>
     <div class="form-group">
-        <label for="sent_on">Sent</label>
+        <label for="sent_on">{{ _("Sent") }}</label>
         <input type="text" class="form-control" name="subject" id="sent_on" size='79' value="{{ message.sent_at.strftime('%m/%d/%Y %H:%M:%S') }}" readonly>
     </div>
     <div class="form-group">
-        <label for="subject">Subject</label>
+        <label for="subject">{{ _("Subject") }}</label>
         <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.subject }}" readonly>
     </div>
     <div class="form-group">
-        <label for="body">Message</label>
+        <label for="body">{{ _("Message") }}</label>
         <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="{{ message.body }}" readonly>
     </div>
 
