--- a/portal/templates/legal.html
+++ b/portal/templates/legal.html
@@ -3,9 +3,9 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
-  {{ back_btn(PORTAL,'Home') }}
+  {{ back_btn(PORTAL, _('Home')) }}
 
-    <h1 class="tnth-headline">TrueNTH</h1>
+    <h1 class="tnth-headline">{{ _("TrueNTH") }}</h1>
 
 <p>{{ content|safe }}</p>
 
