--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -4,7 +4,7 @@
 
 <h4 class="tnth-headline">Patient List</h4>
 <br/>
-<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a patient record</button></a> or select a patient below to view or update details.</div>
+<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">{{ _("Create a patient record") }}</button></a> {{ _("or select a patient below to view or update details.") }}</div>
 
 <hr/>
 
@@ -31,16 +31,16 @@
   {% set orgCount = 1 %}
   {% for org in org_list_by_parent[parent_id] | sort(attribute='id')%}
       <div class="admin-table table-responsive smaller-text">
-          <h4 id="location{{org.id}}">{{ org.name }} Patients</h4>
+          <h4 id="location{{org.id}}">{{ org.name }} {{ _("Patients") }}</h4>
 
           <div id="adminTableToolbar{{org.id}}" class="admin-toolbar">
           {% if config.PROVIDER_BULK_DATA_ACCESS %}
             <div class="orglist-download-container">
                 <div>
-                <a href="javascript:void(0)" id="patientDataDownload{{org.id}}" class="btn btn-default" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;Download patient list</a>
+                <a href="javascript:void(0)" id="patientDataDownload{{org.id}}" class="btn btn-default" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;{{ _("Download patient list") }}</a>
                 </div>
                 <div>
-                <a href="javascript:void(0)" id="patientAssessmentDownload{{org.id}}" class="btn btn-default" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;Download patient assessment data</a>
+                <a href="javascript:void(0)" id="patientAssessmentDownload{{org.id}}" class="btn btn-default" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;{{ _("Download patient assessment data") }}</a>
                 </div>
             </div>
 
@@ -64,17 +64,17 @@
                  >
               <thead>
                   <tr>
-                      <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">ID</th>
-                      <th data-field="username" data-sortable="true">Username</th>
-                      <th data-field="firstname" data-sortable="true">First Name</th>
-                      <th data-field="lastname" data-sortable="true">Last Name</th>
-                      <th data-field="email" data-sortable="true">Email</th>
+                      <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">{{ _("ID") }}</th>
+                      <th data-field="username" data-sortable="true">{{ _("Username") }}</th>
+                      <th data-field="firstname" data-sortable="true">{{ _("First Name") }}</th>
+                      <th data-field="lastname" data-sortable="true">{{ _("Last Name") }}</th>
+                      <th data-field="email" data-sortable="true">{{ _("Email") }}</th>
               {% if 'reports' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}
-                      <th data-field="provider_html" data-sortable="true">Reports</th>
+                      <th data-field="provider_html" data-sortable="true">{{ _("Reports") }}</th>
               {% endif %}
               {% if 'status' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}
-                      <th data-field="next_due" data-sortable="true">Next Due</th>
-                      <th data-field="status" data-sortable="true">Status</th>
+                      <th data-field="next_due" data-sortable="true">{{ _("Next Due") }}</th>
+                      <th data-field="status" data-sortable="true">{{ _("Status") }}</th>
               {% endif %}
                   </tr>
               </thead>
@@ -115,15 +115,15 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Bulk data download not yet implemented</h4>
+                <h4 class="modal-title" id="myModalLabel">{{ _("Bulk data download not yet implemented") }}</h4>
               </div>
               <div class="modal-body" style="font-size:0.8em">
                 <br/>
-                <p class="text-left">Bulk data download not yet implemented</p>
+                <p class="text-left">{{ _("Bulk data download not yet implemented") }}</p>
                 <br/>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" style="font-size:0.7em">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" style="font-size:0.7em">{{ _("Close") }}</button>
               </div>
             </div>
           </div>
