--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -4,17 +4,17 @@
 {#
 {% if not user.has_role('write_only') %}
 <div class="portal-item">
-    <h2 class="tnth-subhead">Explore TrueNTH</h2>
-    <p>Discover online tools to guide you through the cancer journey.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">Learn More</a>
+    <h2 class="tnth-subhead">{{ _("Explore TrueNTH") }}</h2>
+    <p>{{ _("Discover online tools to guide you through the cancer journey.") }}</p>
+    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">{{ _("Learn More") }}</a>
 </div>
 {% endif %}
 #}
 
 {% if user.has_role('write_only') %}
 <div class="portal-item">
-    <h2 class="tnth-subhead">Welcome to TrueNTH</h2>
-    Tools for navigating the prostate cancer journey
+    <h2 class="tnth-subhead">{{ _("Welcome to TrueNTH") }}</h2>
+    {{ _("Tools for navigating the prostate cancer journey") }}
 </div>
 {% endif %}
 
@@ -41,9 +41,9 @@
 
 {% if user.has_role('write_only') %}
     <div class="portal-item">
-        <h2 class="tnth-subhead">Complete Registration</h2>
-        <p>Completing your registration will allow you to return here in the future to see the information you've previously entered.</p>
-        <a href="javascript:void(0)" class="btn-lg btn-tnth-primary" data-toggle="modal" data-target="#registrationModal">Registration</a>
+        <h2 class="tnth-subhead">{{ _("Complete Registration") }}</h2>
+        <p>{{ _("Completing your registration will allow you to return here in the future to see the information you've previously entered.") }}</p>
+        <a href="javascript:void(0)" class="btn-lg btn-tnth-primary" data-toggle="modal" data-target="#registrationModal">{{ _("Registration") }}</a>
     </div>
     <div class="modal fade" id="registrationModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel">
       <div class="modal-dialog" role="document">
@@ -54,11 +54,11 @@
           </div>
           <div class="modal-body" style="font-size:0.8em">
             <br/>
-            <p class="text-center">This feature is not yet available.</p>
+            <p class="text-center">{{ _("This feature is not yet available.") }}</p>
             <br/>
           </div>
           <div class="modal-footer" style="background-color:#79815D; color: #FFF">
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="font-size:0.7em">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="font-size:0.7em">{{ _("Close") }}</button>
           </div>
         </div>
       </div>
