--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -16,7 +16,7 @@
     <div class="row" style="position: relative;">
         <div class="col-md-12">
             <hr>
-            <h4 class="tnth-headline left-indent-top">New User</h4>
+            <h4 class="tnth-headline left-indent-top">{{ _("New User") }}</h4>
             <hr/>
             <br/>
             <div class="profile-item-container create-account-container">
@@ -51,10 +51,10 @@
                      <br/>
                      <hr class="pc-hr"/>
                     <div class="form-group profile-section" id="userOrgs">
-                        <label>Clinics <span class="text-muted smaller-text">(Optional)</span></label>
+                        <label>{{ _("Clinics") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
                         <div class="indent">
                         <div id="fillOrgs"></div>
-                        <div class="checkbox noOrg-container" style="{{'display:none' if removeNone == 'true'}}"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0">None of the Above</label></div>
+                        <div class="checkbox noOrg-container" style="{{'display:none' if removeNone == 'true'}}"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0">{{ _("None of the Above") }}</label></div>
                         </div>
                         <div class="help-block with-errors"></div>
                     </div>
