--- a/portal/templates/profile_test.html
+++ b/portal/templates/profile_test.html
@@ -8,14 +8,14 @@
 
 <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i><br />
-    <p class="lead">Saving...</p>
+    <p class="lead">{{ _("Saving") }}...</p>
 </div>
 
 <h3 class="tnth-headline">
 {% if current_user.has_role('admin')%}
-Profile for {{ user.username }}
+{{ _("Profile for") }} {{ user.username }}
 {% else %}
-My TrueNTH Profile
+{{ _("My TrueNTH Profile") }}
 {% endif %}
 </h3>
 
@@ -38,41 +38,41 @@ My TrueNTH Profile
         <div class="row">
             <div class="col-xs-6">
                 <div class="form-group float-input-label">
-                    <label for="email">First Name</label>
-                    <input required="required" data-error="First name is required" class="form-control float-text" id="firstname" name="firstname" placeholder="" value="{{ user.first_name if user.first_name }}" type="text" />
+                    <label for="email">{{ _("First Name") }}</label>
+                    <input required="required" data-error="{{ _('First name is required') }}" class="form-control float-text" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" value="{{ user.first_name if user.first_name }}" type="text" />
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="form-group float-input-label">
-                    <label for="email">Last Name</label>
-                    <input required="required" data-error="Last name is required" class="form-control float-text" name="lastname" placeholder="Last Name" value="{{ user.last_name if user.last_name }}" type="text" />
+                    <label for="email">{{ _("Last Name") }}</label>
+                    <input required="required" data-error="{{ _('Last name is required') }}" class="form-control float-text" name="lastname" placeholder="{{ _('Last Name') }}" value="{{ user.last_name if user.last_name }}" type="text" />
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
         </div>
 
         <div class="form-group" id="bdGroup">
-            <label>Birth Date</label>
+            <label>{{ _("Birth Date") }}</label>
             <div class="row">
                 <div class="col-xs-4">
                     <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" data-birthday="true" required />
                 </div>
                 <div class="col-xs-4">
                     <select class="form-control bd-element" name="birthdayMonth" id="month" data-birthday="true" required>
-                        <option value="">Month...</option>
-                        <option value="01">January</option>
-                        <option value="02">February</option>
-                        <option value="03">March</option>
-                        <option value="04">April</option>
-                        <option value="05">May</option>
-                        <option value="06">June</option>
-                        <option value="07">July</option>
-                        <option value="08">August</option>
-                        <option value="09">September</option>
-                        <option value="10">October</option>
-                        <option value="11">November</option>
-                        <option value="12">December</option>
+                        <option value="">{{ _("Month") }}...</option>
+                        <option value="01">{{ _("January") }}</option>
+                        <option value="02">{{ _("February") }}</option>
+                        <option value="03">{{ _("March") }}</option>
+                        <option value="04">{{ _("April") }}</option>
+                        <option value="05">{{ _("May") }}</option>
+                        <option value="06">{{ _("June") }}</option>
+                        <option value="07">{{ _("July") }}</option>
+                        <option value="08">{{ _("August") }}</option>
+                        <option value="09">{{ _("September") }}</option>
+                        <option value="10">{{ _("October") }}</option>
+                        <option value="11">{{ _("November") }}</option>
+                        <option value="12">{{ _("December") }}</option>
                     </select>
                 </div>
                 <div class="col-xs-4">
@@ -82,35 +82,35 @@ My TrueNTH Profile
             <span id="errorbirthday" class="help-block" style="display: none">A block of help text that breaks onto a new line and may extend beyond one line.</span>
         </div>
         <div class="form-group">
-            <label>Gender</label>
+            <label>{{ _("Gender") }}</label>
             <div style="margin-top: -10px">
                 <label class="radio-inline">
                     <input type="radio" name="sex" id="sexM" value="male" required {{ "checked" if user.gender == "male"}}/>
-                    Male
+                    {{ _("Male") }}
                 </label>
                 <label class="radio-inline">
                     <input type="radio" name="sex" id="sexF" value="female" required {{ "checked" if user.gender == "female"}}/>
-                    Female
+                    {{ _("Female") }}
                 </label>
                 <label class="radio-inline">
                     <input type="radio" name="sex" id="sexO" value="other" required {{ "checked" if user.gender == "other"}}/>
-                    Other
+                    {{ _("Other") }}
                 </label>
             </div>
         </div>
         <div class="form-group float-input-label" id="emailGroup">
-            <label for="email">Email address</label>
+            <label for="email">{{ _("Email address") }}</label>
             <input type="text" class="form-control" id="email" name="email" value="{{ user.email if user.email }}" data-customemail="true" required>
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group float-input-label">
-            <label for="phone">{{ _("Cell") }} <span class="text-muted smaller-text">(Optional)</span></label>
+            <label for="phone">{{ _("Cell") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
             <input type="text" class="form-control" id="phone" name="phone" value="{{ user.phone if user.phone }}">
         </div>
 
-        <p id="saveMsg" class="text-muted text-center bg-warning" style="display: none"><small>You've updated your profile. Click the "Save" button to submit your changes. Or <a href="">cancel</a>.</small></p>
-        <p id="errorMsg" class="text-muted text-center bg-danger" style="display: none"><small>Oops, looks like there's a problem with your profile. Please correct it before saving.</small></p>
-        <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary">Save</button>
+        <p id="saveMsg" class="text-muted text-center bg-warning" style="display: none"><small>{{ _("You've updated your profile. Click the Save button to submit your changes. Or") }} <a href="">{{ _("cancel") }}</a>.</small></p>
+        <p id="errorMsg" class="text-muted text-center bg-danger" style="display: none"><small>{{ _("Oops, looks like there's a problem with your profile. Please correct it before saving.") }}</small></p>
+        <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary">{{ _("Save") }}</button>
 
     </div>
 
@@ -168,38 +168,38 @@ My TrueNTH Profile
 <hr />
 
 {% if current_user.has_role('admin') and not user.has_role('service') %}
-<h3>User Roles for {{ user.username }}</h3>
+<h3>{{ _("User Roles for") }} {{ user.username }}</h3>
 <div id="rolesGroup">
     <div class="form-group">
-        <p>Editable by admins only.</p>
+        <p>{{ _("Editable by admins only.") }}</p>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="admin"> Admin
+                <input type="checkbox" value="admin"> {{ _("Admin") }}
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="anon"> Anon
+                <input type="checkbox" value="anon"> {{ _("Anon") }}
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="application_developer"> Application Developer
+                <input type="checkbox" value="application_developer"> {{ _("Application Developer") }}
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="partner"> Partner
+                <input type="checkbox" value="partner"> {{ _("Partner") }}
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="patient"> Patient
+                <input type="checkbox" value="patient"> {{ _("Patient") }}
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="test"> Test
+                <input type="checkbox" value="test"> {{ _("Test") }}
             </label>
         </div>
     </div>
